tests/ui/type/type-check/issue-22897.rs
fn main() { }

fn unconstrained_type() {
    []; //~ ERROR type annotations needed
}
